fix news get
